--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
+    "pikaday": "^1.8.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
