--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
+    "@react-oauth/google": "^0.12.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,10 +17,12 @@
     "bootstrap": "^5.3.2",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
+    "gapi-script": "^1.2.0",
     "pikaday": "^1.8.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.18.0",
