--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "bootstrap": "^5.3.2",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
+    "m3u8-parser": "^7.1.0",
     "pikaday": "^1.8.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-hls-player": "^3.0.7",
     "react-icons": "^4.11.0",
+    "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
