--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.11.0",
+    "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
