--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
+    "@nivo/bar": "^0.84.0",
     "@react-oauth/google": "^0.12.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
@@ -18,6 +19,8 @@
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
     "gapi-script": "^1.2.0",
+    "nivo": "^0.31.0",
+    "or": "^0.2.0",
     "pikaday": "^1.8.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
