--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.11.0",
     "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
