--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "crisp-sdk-web": "^1.0.21",
+    "emoji-picker-react": "^4.7.8",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
     "gapi-script": "^1.2.0",
@@ -40,6 +41,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
