--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
-    "@nivo/bar": "^0.84.0",
     "@react-oauth/google": "^0.12.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
@@ -20,12 +19,12 @@
     "bootstrap": "^5.3.2",
     "crisp-sdk-web": "^1.0.21",
     "emoji-picker-react": "^4.7.8",
+    "event-source-polyfill": "^1.0.31",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
     "gapi-script": "^1.2.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
-    "nivo": "^0.31.0",
     "or": "^0.2.0",
     "pikaday": "^1.8.2",
     "react": "^18.2.0",
