--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
     "gapi-script": "^1.2.0",
+    "javascript-time-ago": "^2.5.9",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "or": "^0.2.0",
@@ -39,6 +40,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-time-ago": "^7.2.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
     "swiper": "^11.0.5",
