--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "crisp-sdk-web": "^1.0.21",
+    "date-fns": "^3.3.1",
     "emoji-picker-react": "^4.7.12",
     "event-source-polyfill": "^1.0.31",
     "flowbite": "^2.0.0",
