--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.3",
     "crisp-sdk-web": "^1.0.21",
     "date-fns": "^3.3.1",
     "emoji-picker-react": "^4.7.12",
