--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.15.7",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -38,11 +39,13 @@
     "react-moment": "^1.1.3",
     "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.1.2",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-time-ago": "^7.2.1",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "sass": "^1.69.5",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
