--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-mentions": "^4.4.10",
     "react-moment": "^1.1.3",
     "react-player": "^2.13.0",
