--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.4.0",
     "react-mentions": "^4.4.10",
