change app icon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,13 +8,13 @@
       "type": "image/x-icon"
     },
     {
-      "src": "faviconImg.png",
-      "type": "image/png",
+      "src": "favicon-new.ico",
+      "type": "image/x-icon",
       "sizes": "192x192"
     },
     {
-      "src": "faviconImg.png",
-      "type": "image/png",
+      "src": "favicon-new.ico",
+      "type": "image/x-icon",
       "sizes": "512x512"
     }
   ],
